k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrip-backend-prod
  namespace: scrip-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: scrip-backend-prod
  template:
    metadata:
      labels:
        app: scrip-backend-prod
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: backend
          image: ghcr.io/shadinmd/scrip-backend:3cc2ca2d997bae3ee52ba9ff343490e63984a214
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
