k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: scrip-prod
spec:
  selector:
    app: scrip-backend-prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
